# text-analysis

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LLM_USAGE_ANALYSIS.md  README.md  pyproject.toml
infra/terraform/: README.md  lambda_env.auto.tfvars  main.tf  outputs.tf  variables.tf  versions.tf
scripts/: deploy.sh  run_comparison_example.py  run_standalone_example.py  test_comparison_api.py  test_standalone_api.py
src/: __init__.py  config.py  handler.py  logging_utils.py
src/llm/: client.py  factory.py  prompts.py
src/models/: __init__.py  schemas.py  validators.py
src/pipeline/: __init__.py  aggregate.py  analyze.py  clustering.py  embedding.py  insights_tfidf.py  normalize.py  pipeline.py  sentiment.py
tests/: conftest.py  test_config.py  test_handler.py  test_llm_schemas.py  test_pipeline_aggregate.py  test_pipeline_analyze_e2e.py  test_pipeline_analyze_llm.py  test_pipeline_clustering.py  test_pipeline_embedding.py  test_pipeline_normalize.py  test_pipeline_overflow_other.py  test_pipeline_sentiment.py  test_schema.py
